# godot_rust_tracing_tracy_bug

./: .gitignore  README.md
godot/: icon.svg.import  project.godot  test.gdextension  test.gdextension.uid  test_scene.tscn
rust/: Cargo.toml
rust/src/: lib.rs
